# doomy

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  KeyboardInputExample.java  README.md
editor/: bsp_tree.py  editor.py  editor_math.py  image_loader.py  load_library.py  map.py  vertex_dialog.py  wall_dialog.py
editor.v2/: bsp_tree.py  button.py  canvas.py  colordatacontainer.py  editor_math.py  main.py  map.py  map_builder.py  map_file_handler.py  popup.py  textbox.py  tray.py  vertexcontainer.py  wallpopup.py
editor.v2/ui/: button.py  popup.py  stackableelement.py  textbox.py  toggleable.py  tray.py  uielement.py  wallpopup.py
editor.v3/: ActionButton.java  Canvas.java  EditMode.java  Editor.java  EditorWindow.java  FileMenu.java  KeyboardHandler.java  MouseHandler.java  OptionMenu.java  Pair.java  SectorMenu.java  Switch.java  Tools.java  ToolsTrayUI.java  Wall.java  WallMenu.java
editor.v3/com/actions/: AddWall.java  EditWall.java  LoadMap.java  NewMap.java  ProcessSectors.java  SaveMap.java
editor.v3/com/canvas/: Canvas.java  EditMode.java
editor.v3/com/extensions/: ActionButton.java  ActionWithDialog.java  OptionMenu.java  Switch.java
editor.v3/com/handlers/: FileHandler.java  KeyboardHandler.java  MouseHandler.java
editor.v3/com/models/: BSPTree.java  LvlData.java  MapDat.java  Mat2.java  Pair.java  Vec2.java  Vertex.java  Wall.java  WallType.java
editor.v3/com/tools/: FileMenu.java  SectorMenu.java  Tools.java  ToolsTrayUI.java  WallMenu.java
include/: Shader.h  Vertex.java  bsp_tree.h  callback.h  camera.h  common_struct.h  constants.h  debug.h  draw.h  geom.h  gllib.h  gllogger.h  input.h  map.h  minimap.h  screen_space_mapper.h  shared_graphics.h  standard.h  std_graphics.h  texture.h  vectmath.h  viewmap.h
include/Glaze/: gllib.h  std_graphics.h  texture.h
include/Glimpse/: glerrorcode.h  glout.h  status.h
lib/Glaze/: CMakeLists.txt
lib/Glaze/include/: gllib.h  shader.h  std_graphics.h
lib/Glaze/src/: glad.cpp  gllib.cpp  shader.cpp  std_graphics.cpp  texture.cpp
lib/Glimpse/: CMakeLists.txt
lib/Glimpse/include/: consoleout.h  glimpse.h
lib/Glimpse/src/: consoleout.cpp  glerrorcode.cpp  glimpse.cpp  glout.cpp  status.cpp
lib/graphics/: CMakeLists.txt  gllib.h  screen_space_mapper.h  shared_graphics.h
lib/graphics/include/: Shader.h  bsp_tree.h  geom.h  texture.h  vectmath.h  wall_node.h
lib/graphics/src/: draw.cpp  minimap.cpp  wall_node.cpp
lvl/: _old_.bsp  lvldata copy.bsp  lvldata.bsp
shaders/: shader.fsh  shader.vsh
src/: bsp_tree.cpp  callback.cpp  common_struct.cpp  draw.cpp  geom.cpp  input.cpp  main.cpp  minimap.cpp  screen_space_mapper.cpp  shared_graphics.cpp  std_graphics.cpp
